-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.7.0 Beta3
-
None
-
9d8501e9e (dev), 23b2331c3 (6.7)
When I set the BitRateKey to 500000 bit/s and the DataBitRateKey to 2000000bit/s, the device can't be connected, but when both are set to 0, the device is connected successfully, but my hardware's BitRateKey and DataBitRateKey are 500000 bit/s and 2000000bit/s respectively.

| For Gerrit Dashboard: QTBUG-123012 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 547766,3 | VectorCAN: Set CAN-FD configuration only for uninitialized channels | dev | qt/qtserialbus | Status: MERGED | +2 | 0 |
| 551578,2 | VectorCAN: Set CAN-FD configuration only for uninitialized channels | 6.7 | qt/qtserialbus | Status: MERGED | +2 | 0 |